@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -30,9 +30,8 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 
-import javax.annotation.PostConstruct;
-import javax.inject.Inject;
-
+import jakarta.annotation.PostConstruct;
+import jakarta.inject.Inject;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
@@ -80,7 +79,7 @@ import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
  * @author Stephane Nicoll
  * @author Juergen Hoeller
  */
-public class AnnotationDrivenEventListenerTests {
+class AnnotationDrivenEventListenerTests {
 
 	private ConfigurableApplicationContext context;
 
@@ -98,7 +97,7 @@ public class AnnotationDrivenEventListenerTests {
 
 
 	@Test
-	public void simpleEventJavaConfig() {
+	void simpleEventJavaConfig() {
 		load(TestEventListener.class);
 		TestEvent event = new TestEvent(this, "test");
 		TestEventListener listener = this.context.getBean(TestEventListener.class);
@@ -112,10 +111,16 @@ public class AnnotationDrivenEventListenerTests {
 		this.context.publishEvent(event);
 		this.eventCollector.assertEvent(listener, event);
 		this.eventCollector.assertTotalEventsCount(1);
+
+		context.getBean(ApplicationEventMulticaster.class).removeApplicationListeners(l ->
+				l instanceof SmartApplicationListener && ((SmartApplicationListener) l).getListenerId().contains("TestEvent"));
+		this.eventCollector.clear();
+		this.context.publishEvent(event);
+		this.eventCollector.assertNoEventReceived(listener);
 	}
 
 	@Test
-	public void simpleEventXmlConfig() {
+	void simpleEventXmlConfig() {
 		this.context = new ClassPathXmlApplicationContext(
 				"org/springframework/context/event/simple-event-configuration.xml");
 
@@ -127,10 +132,16 @@ public class AnnotationDrivenEventListenerTests {
 		this.context.publishEvent(event);
 		this.eventCollector.assertEvent(listener, event);
 		this.eventCollector.assertTotalEventsCount(1);
+
+		context.getBean(ApplicationEventMulticaster.class).removeApplicationListeners(l ->
+				l instanceof SmartApplicationListener && ((SmartApplicationListener) l).getListenerId().contains("TestEvent"));
+		this.eventCollector.clear();
+		this.context.publishEvent(event);
+		this.eventCollector.assertNoEventReceived(listener);
 	}
 
 	@Test
-	public void metaAnnotationIsDiscovered() {
+	void metaAnnotationIsDiscovered() {
 		load(MetaAnnotationListenerTestBean.class);
 		MetaAnnotationListenerTestBean bean = this.context.getBean(MetaAnnotationListenerTestBean.class);
 		this.eventCollector.assertNoEventReceived(bean);
@@ -139,10 +150,16 @@ public class AnnotationDrivenEventListenerTests {
 		this.context.publishEvent(event);
 		this.eventCollector.assertEvent(bean, event);
 		this.eventCollector.assertTotalEventsCount(1);
+
+		context.getBean(ApplicationEventMulticaster.class).removeApplicationListeners(l ->
+				l instanceof SmartApplicationListener && ((SmartApplicationListener) l).getListenerId().equals("foo"));
+		this.eventCollector.clear();
+		this.context.publishEvent(event);
+		this.eventCollector.assertNoEventReceived(bean);
 	}
 
 	@Test
-	public void contextEventsAreReceived() {
+	void contextEventsAreReceived() {
 		load(ContextEventListener.class);
 		ContextEventListener listener = this.context.getBean(ContextEventListener.class);
 
@@ -158,7 +175,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void methodSignatureNoEvent() {
+	void methodSignatureNoEvent() {
 		@SuppressWarnings("resource")
 		AnnotationConfigApplicationContext failingContext =
 				new AnnotationConfigApplicationContext();
@@ -172,7 +189,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void simpleReply() {
+	void simpleReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, "dummy");
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -187,7 +204,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void nullReplyIgnored() {
+	void nullReplyIgnored() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, null); // No response
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -202,7 +219,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void arrayReply() {
+	void arrayReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, new String[]{"first", "second"});
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -217,7 +234,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void collectionReply() {
+	void collectionReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		Set<Object> replies = new LinkedHashSet<>();
 		replies.add("first");
@@ -236,7 +253,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void collectionReplyNullValue() {
+	void collectionReplyNullValue() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, Arrays.asList(null, "test"));
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -251,7 +268,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void listenableFutureReply() {
+	void listenableFutureReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		SettableListenableFuture<String> future = new SettableListenableFuture<>();
 		future.set("dummy");
@@ -268,7 +285,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void completableFutureReply() {
+	void completableFutureReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, CompletableFuture.completedFuture("dummy"));
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -283,7 +300,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void monoReply() {
+	void monoReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, Mono.just("dummy"));
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -298,7 +315,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void fluxReply() {
+	void fluxReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, Flux.just("dummy1", "dummy2"));
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -313,7 +330,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void eventListenerWorksWithSimpleInterfaceProxy() {
+	void eventListenerWorksWithSimpleInterfaceProxy() {
 		load(ScopedProxyTestBean.class);
 
 		SimpleService proxy = this.context.getBean(SimpleService.class);
@@ -330,7 +347,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void eventListenerWorksWithAnnotatedInterfaceProxy() {
+	void eventListenerWorksWithAnnotatedInterfaceProxy() {
 		load(AnnotatedProxyTestBean.class);
 
 		AnnotatedSimpleService proxy = this.context.getBean(AnnotatedSimpleService.class);
@@ -347,7 +364,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void eventListenerWorksWithCglibProxy() {
+	void eventListenerWorksWithCglibProxy() {
 		load(CglibProxyTestBean.class);
 
 		CglibProxyTestBean proxy = this.context.getBean(CglibProxyTestBean.class);
@@ -364,14 +381,14 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void privateMethodOnCglibProxyFails() {
+	void privateMethodOnCglibProxyFails() {
 		assertThatExceptionOfType(BeanInitializationException.class).isThrownBy(() ->
 				load(CglibProxyWithPrivateMethod.class))
 			.withCauseInstanceOf(IllegalStateException.class);
 	}
 
 	@Test
-	public void eventListenerWorksWithCustomScope() {
+	void eventListenerWorksWithCustomScope() {
 		load(CustomScopeTestBean.class);
 		CustomScope customScope = new CustomScope();
 		this.context.getBeanFactory().registerScope("custom", customScope);
@@ -400,7 +417,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void asyncProcessingApplied() throws InterruptedException {
+	void asyncProcessingApplied() throws InterruptedException {
 		loadAsync(AsyncEventListener.class);
 
 		String threadName = Thread.currentThread().getName();
@@ -415,7 +432,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void asyncProcessingAppliedWithInterfaceProxy() throws InterruptedException {
+	void asyncProcessingAppliedWithInterfaceProxy() throws InterruptedException {
 		doLoad(AsyncConfigurationWithInterfaces.class, SimpleProxyTestBean.class);
 
 		String threadName = Thread.currentThread().getName();
@@ -430,7 +447,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void asyncProcessingAppliedWithScopedProxy() throws InterruptedException {
+	void asyncProcessingAppliedWithScopedProxy() throws InterruptedException {
 		doLoad(AsyncConfigurationWithInterfaces.class, ScopedProxyTestBean.class);
 
 		String threadName = Thread.currentThread().getName();
@@ -445,7 +462,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void exceptionPropagated() {
+	void exceptionPropagated() {
 		load(ExceptionEventListener.class);
 		TestEvent event = new TestEvent(this, "fail");
 		ExceptionEventListener listener = this.context.getBean(ExceptionEventListener.class);
@@ -458,7 +475,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void exceptionNotPropagatedWithAsync() throws InterruptedException {
+	void exceptionNotPropagatedWithAsync() throws InterruptedException {
 		loadAsync(ExceptionEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, "fail");
 		ExceptionEventListener listener = this.context.getBean(ExceptionEventListener.class);
@@ -472,7 +489,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void listenerWithSimplePayload() {
+	void listenerWithSimplePayload() {
 		load(TestEventListener.class);
 		TestEventListener listener = this.context.getBean(TestEventListener.class);
 
@@ -483,7 +500,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void listenerWithNonMatchingPayload() {
+	void listenerWithNonMatchingPayload() {
 		load(TestEventListener.class);
 		TestEventListener listener = this.context.getBean(TestEventListener.class);
 
@@ -494,7 +511,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void replyWithPayload() {
+	void replyWithPayload() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, "String");
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -510,7 +527,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void listenerWithGenericApplicationEvent() {
+	void listenerWithGenericApplicationEvent() {
 		load(GenericEventListener.class);
 		GenericEventListener listener = this.context.getBean(GenericEventListener.class);
 
@@ -521,7 +538,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void listenerWithResolvableTypeEvent() {
+	void listenerWithResolvableTypeEvent() {
 		load(ResolvableTypeEventListener.class);
 		ResolvableTypeEventListener listener = this.context.getBean(ResolvableTypeEventListener.class);
 
@@ -533,7 +550,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void listenerWithResolvableTypeEventWrongGeneric() {
+	void listenerWithResolvableTypeEventWrongGeneric() {
 		load(ResolvableTypeEventListener.class);
 		ResolvableTypeEventListener listener = this.context.getBean(ResolvableTypeEventListener.class);
 
@@ -545,12 +562,12 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void conditionMatch() {
+	void conditionMatch() {
 		validateConditionMatch(ConditionalEventListener.class);
 	}
 
 	@Test
-	public void conditionMatchWithProxy() {
+	void conditionMatchWithProxy() {
 		validateConditionMatch(ConditionalEventListener.class, MethodValidationPostProcessor.class);
 	}
 
@@ -583,7 +600,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void conditionDoesNotMatch() {
+	void conditionDoesNotMatch() {
 		long maxLong = Long.MAX_VALUE;
 		load(ConditionalEventListener.class);
 		TestEvent event = new TestEvent(this, "KO");
@@ -619,7 +636,7 @@ public class AnnotationDrivenEventListenerTests {
 
 
 	@Test
-	public void orderedListeners() {
+	void orderedListeners() {
 		load(OrderedTestListener.class);
 		OrderedTestListener listener = this.context.getBean(OrderedTestListener.class);
 
@@ -629,7 +646,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test @Disabled  // SPR-15122
-	public void listenersReceiveEarlyEvents() {
+	void listenersReceiveEarlyEvents() {
 		load(EventOnPostConstruct.class, OrderedTestListener.class);
 		OrderedTestListener listener = this.context.getBean(OrderedTestListener.class);
 
@@ -637,7 +654,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void missingListenerBeanIgnored() {
+	void missingListenerBeanIgnored() {
 		load(MissingEventListener.class);
 		context.getBean(UseMissingEventListener.class);
 		context.getBean(ApplicationEventMulticaster.class).multicastEvent(new TestEvent(this));
@@ -691,7 +708,7 @@ public class AnnotationDrivenEventListenerTests {
 		static class TestConditionEvaluator {
 
 			public boolean valid(Double ratio) {
-				return new Double(42).equals(ratio);
+				return Double.valueOf(42).equals(ratio);
 			}
 		}
 	}
@@ -723,7 +740,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 
-	@EventListener
+	@EventListener(id = "foo")
 	@Target(ElementType.METHOD)
 	@Retention(RetentionPolicy.RUNTIME)
 	@interface FooListener {
